Update network configurations and UI

--- a/public/index.html
+++ b/public/index.html
@@ -315,6 +315,7 @@
                         <option value="ETH">Ethereum</option>
                         <option value="BSC" selected>BSC</option>
                         <option value="BASE">Base</option>
+                        <option value="MONAD">Monad</option>
                     </select>
                 </div>
                 <div class="input-group">
